Добавление refresh для токенов

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,8 @@ spring.datasource.password=ilyas
 spring.datasource.driverClassName=org.postgresql.Driver
 
 jwt.secret=ILOVEMARIAVASILCHENKO
-jwt.expiration=3600000
+jwt.expiration=7200000
+jwt.refreshExpiration=2592000000
 
 ai.url.api=http://localhost:8082/api/v1/ai
 
