--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,5 +16,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 
+ai.repos=../../neuro_testing_ai/MorphoRuEva
+
 server.servlet.context-path=/
 server.port=8081
