--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,9 @@ spring.datasource.username=ilyas
 spring.datasource.password=ilyas
 spring.datasource.driverClassName=org.postgresql.Driver
 
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.security=DEBUG
+
 jwt.secret=ILOVEMARIAVASILCHENKO
 jwt.expiration=7200000
 jwt.refreshExpiration=2592000000
