--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.datasource.driverClassName=org.postgresql.Driver
 
 logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.web.cors=DEBUG
 
 jwt.secret=ILOVEMARIAVASILCHENKO
 jwt.expiration=7200000
