--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,6 +21,15 @@ spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 
 ai.repos=../../neuro_testing_ai/MorphoRuEva
+web.app.url = "194.58.114.242:8080"
+
+spring.mail.host=smtp.rambler.ru
+spring.mail.port=587
+spring.mail.username=writegrade@rambler.ru
+spring.mail.password=ilcompWritegrade2024
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
 
 server.servlet.context-path=/
 server.port=8081
